...
        onRefresh = {
            viewModel.loadUsers()
        },
        modifier =
            modifier
                .fillMaxSize()
                .testTag("HomeRefreshBox")
                .then(
                    if (deviceConfiguration.requiresDisplayCutoutPadding()) {
                        Modifier.windowInsetsPadding(WindowInsets.displayCutout)
                    } else {
                        Modifier
                    },
...

                    if (visibleUsers.isNotEmpty() && index < visibleUsers.size) {
                        Box(modifier = Modifier.fillMaxSize()) {
                            UserSwipeCardStack(
                                modifier =
                                    Modifier
                                        .testTag("swipeHome"),
                                users = visibleUsers,
                                canUndo = canUndo,
                                onSwipeLeft = { viewModel.swipeLeft() },
                                onGoBack = { viewModel.undoSwipe() },
                                onSwipeRight = { viewModel.swipeRight() },
                                currentUser = currentUser,
...
