package com.feryaeljustice.mirailink.domain.util

interface Logger {
    fun d(
        tag: String,
        message: String,
    )
}
