...

    BoxWithConstraints(
        modifier =
            modifier
                .fillMaxSize()
                .background(MaterialTheme.colorScheme.surface)
                .testTag("userCard")
                .pointerInput(photoCarouselController) {
                    detectTapGestures(
                        onTap = { offset ->
                            if (offset.x < size.width / 2f) {
                                photoCarouselController.previous()
                            } else {
...
